feat: performance for Threadpool